<resources>
    <string name="app_name">Moatmer</string>
    <string name="pray_time">pray time</string>
    <string name="join_us">join us</string>
    <string name="do_pray">do pray</string>
    <string name="with_muammar">With Muammar</string>
    <string name="azkar">azkar</string>
    <string name="sebha">sebha</string>
    <string name="fajr">Fajr</string>
    <string name="sunrise">Sunrise</string>
    <string name="duhr">Duhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="prayer_times">Prayer Times</string>
    <string name="kebla">kebla</string>
    <string name="am">am</string>
    <string name="pm">pm</string>
    <string name="umrah_request">Umrah request</string>
    <string name="search_for_person">search for person</string>
    <string name="moatmer_details">Moatmer Details</string>
    <string name="request">Umrah request</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kind">kind :</string>
    <string name="age">age :</string>
    <string name="umrat">Umrat :</string>
    <string name="rating">Rating</string>

</resources>