<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="moatmerModel"
            type="com.semicode.moatmer.data.model.moatmer.MoatmerModelData" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.moatmerDetails.fragment.PersonalInformationFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/_4sdp"
                    android:gravity="center_vertical"
                    android:text="@string/kind"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"

                    app:drawableStartCompat="@drawable/ic_gender" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/_4sdp"
                    android:gravity="center_vertical"
                    android:text="@string/age"

                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    app:drawableStartCompat="@drawable/ic_age" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/_4sdp"
                    android:gravity="center_vertical"
                    android:text="@string/umrat"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    app:drawableStartCompat="@drawable/ic_hram_gray" />

                <TextView
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:background="@color/yellow"
                    android:drawablePadding="@dimen/_4sdp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="@dimen/_70sdp"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/_4sdp"
                    android:gravity="center_vertical"
                    android:text="@string/rating"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"

                    app:drawableStartCompat="@drawable/ic_star" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>