<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".SplashActivity">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@color/black"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp"
            android:paddingHorizontal="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:src="@drawable/ic_notifaction" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/_20sdp"
                android:src="@drawable/image"
                app:civ_border_color="@color/yellow"
                app:civ_border_width="@dimen/_1sdp" />

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp"

                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <FrameLayout
                        android:layout_width="match_parent"

                        android:layout_height="match_parent"
                        android:background="@drawable/yellow_strok">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_inscription">

                            <LinearLayout
                                android:id="@+id/harm_layout"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/_100sdp"
                                android:layout_alignParentStart="true"
                                android:layout_margin="@dimen/_10sdp"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="@dimen/_10sdp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/do_pray"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/_30sdp"
                                    android:textStyle="bold" />


                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/with_muammar"
                                    android:textColor="@color/gray"
                                    android:textSize="@dimen/_13sdp" />


                            </LinearLayout>

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_170sdp"
                                android:layout_below="@+id/harm_layout"
                                android:scaleType="fitXY"
                                android:src="@drawable/bg_harm" />
                        </RelativeLayout>

                    </FrameLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_marginTop="@dimen/_10sdp">

                    <FrameLayout
                        android:layout_width="match_parent"

                        android:layout_height="match_parent"
                        android:background="@drawable/yellow_strok">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_inscription">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:text="@string/join_us"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_23sdp" />


                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:layout_margin="@dimen/_10sdp"
                                android:src="@drawable/ic_logo" />
                        </RelativeLayout>

                    </FrameLayout>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_3sdp"
                        android:layout_weight="1"
                        app:cardCornerRadius="@dimen/_3sdp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/soft_blue"
                            android:orientation="vertical"
                            android:padding="@dimen/_5sdp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="3"
                                android:padding="@dimen/_5sdp"
                                android:src="@drawable/ic_azkar" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/azkar"
                                android:textColor="@color/white" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_3sdp"
                        android:layout_weight="1"
                        app:cardCornerRadius="@dimen/_3sdp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/soft_blue"
                            android:orientation="vertical"
                            android:padding="@dimen/_5sdp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="3"
                                android:padding="@dimen/_5sdp"
                                android:src="@drawable/ic_kbla" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/kabla"
                                android:textColor="@color/white" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_3sdp"
                        android:layout_weight="1"
                        app:cardCornerRadius="@dimen/_3sdp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/soft_blue"
                            android:orientation="vertical"
                            android:padding="@dimen/_5sdp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="3"
                                android:padding="@dimen/_5sdp"
                                android:src="@drawable/ic_kbla" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/sebha"
                                android:textColor="@color/white" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/soft_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_80sdp"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                android:weightSum="3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/pray_time"
                    android:textColor="@color/yellow"
                    android:textSize="@dimen/_17sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/pray_time"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/pray_time"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_80sdp"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                android:weightSum="3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="11:35"
                    android:textColor="@color/yellow"
                    android:textSize="@dimen/_30sdp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/pray_time"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />


            </LinearLayout>

        </RelativeLayout>


        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="@drawable/top_bg"
                android:scaleType="fitXY" />

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center|top"
                android:background="@drawable/ic_logo"
                android:padding="@dimen/_5sdp"
                android:scaleType="fitXY" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>